<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_reset_passw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="56dp"
        android:text="@string/btn_reset_password"
        app:layout_constraintStart_toStartOf="@+id/error_new_passw"
        app:layout_constraintTop_toBottomOf="@+id/error_new_passw" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/error_new_passw"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/error_reset_code"
        app:layout_constraintTop_toBottomOf="@+id/error_reset_code">

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_reset_code"
            app:layout_constraintStart_toStartOf="@+id/et_reset_code"
            app:layout_constraintTop_toBottomOf="@+id/et_reset_code" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/error_reset_code"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_passw"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_passw">

        <EditText
            android:id="@+id/et_reset_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/reset_code"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/tv_enter_passw"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_enter_passw"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_passw" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_enter_passw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:text="Enter the code from email \nand new password"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>